--- a/package.json
+++ b/package.json
@@ -1,15 +1,17 @@
 {
-  "name": "react-tool",
-  "version": "0.1.0",
-  "private": true,
+  "name": "cat-react-tool",
+  "version": "0.1.4",
+  "main": "dist/index.js",
   "dependencies": {
     "autoprefixer": "7.1.6",
+    "awesome-typescript-loader": "^5.2.1",
     "babel-jest": "20.0.3",
     "babel-loader": "7.1.2",
     "babel-preset-react-app": "^3.1.2",
     "case-sensitive-paths-webpack-plugin": "2.1.1",
     "chalk": "1.1.3",
     "css-loader": "0.28.7",
+    "declaration-bundler-webpack-plugin": "^1.0.3",
     "dotenv": "4.0.0",
     "dotenv-expand": "4.2.0",
     "extract-text-webpack-plugin": "3.0.2",
@@ -33,7 +35,7 @@
     "style-loader": "0.19.0",
     "sw-precache-webpack-plugin": "0.11.4",
     "ts-jest": "22.0.1",
-    "ts-loader": "^2.3.7",
+    "ts-loader": "^5.3.3",
     "tsconfig-paths-webpack-plugin": "^2.0.0",
     "tslint": "^5.7.0",
     "tslint-config-prettier": "^1.10.0",
@@ -48,6 +50,7 @@
   "scripts": {
     "start": "node scripts/start.js",
     "build": "node scripts/build.js",
+    "build-publish": "node scripts/publish.js",
     "test": "node scripts/test.js --env=jsdom"
   },
   "devDependencies": {
