新增配置文件

--- a/.gitignore
+++ b/.gitignore
@@ -7,9 +7,10 @@
 /coverage
 
 # production
-/public
-/config
-/scripts
+# /public
+# /config
+/scripts/publish.js
+/scripts/publish-to-npm.js
 
 # misc
 .DS_Store
