--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "tslint-react": "^3.2.0",
     "uglifyjs-webpack-plugin": "1.2.5",
     "url-loader": "0.6.2",
+    "validate-commit-msg": "^2.14.0",
     "webpack": "3.8.1",
     "webpack-dev-server": ">=3.1.11",
     "webpack-manifest-plugin": "1.3.2",
@@ -51,7 +52,8 @@
     "build": "node scripts/build.js",
     "build-publish": "node scripts/publish.js",
     "publish-to-npm": "npm run build-publish && npm run build && node scripts/publish-to-npm.js",
-    "test": "node scripts/test.js --env=jsdom"
+    "test": "node scripts/test.js --env=jsdom",
+    "commit": "validate-commit-msg"
   },
   "devDependencies": {
     "@types/jest": "^23.3.12",
