--- a/package.json
+++ b/package.json
@@ -57,7 +57,7 @@
   },
   "config": {
     "ghooks": {
-      "commit-msg": "validate-commit-msg"
+      "commit-msg": "npm run commit"
     }
   },
   "devDependencies": {
