--- a/.vcmrc
+++ b/.vcmrc
@@ -1,13 +1,13 @@
 {
   "types": ["feat", "fix", "docs", "style", "refactor", "perf", "test", "build", "ci", "chore", "revert",":art"],
   "scope": {
-    "required": false,
+    "required": true,
     "allowed": ["*"],
-    "validate": false,
-    "multiple": false
+    "validate": true,
+    "multiple": true
   },
-  "warnOnFail": false,
+  "warnOnFail": true,
   "maxSubjectLength": 100,
   "helpMessage": "",
-  "autoFix": false
+  "autoFix": true
 }
