--- a/package.json
+++ b/package.json
@@ -42,11 +42,12 @@
     "tslint": "^5.7.0",
     "tslint-config-prettier": "^1.10.0",
     "tslint-react": "^3.2.0",
+    "typings-for-css-modules-loader": "^1.7.0",
     "uglifyjs-webpack-plugin": "1.2.5",
     "url-loader": "0.6.2",
     "validate-commit-msg": "^2.14.0",
     "webpack": "3.8.1",
-    "webpack-dev-server": ">=3.1.11",
+    "webpack-dev-server": "3.0.0",
     "webpack-manifest-plugin": "1.3.2",
     "whatwg-fetch": "2.0.3"
   },
