--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "dotenv": "4.0.0",
     "dotenv-expand": "4.2.0",
     "extract-text-webpack-plugin": "3.0.2",
-    "file-loader": "1.1.5",
+    "file-loader": "1.1.6",
     "fork-ts-checker-webpack-plugin": "^0.2.8",
     "fs-extra": "^7.0.1",
     "html-webpack-plugin": "2.29.0",
@@ -55,8 +55,9 @@
     "start": "node scripts/start.js",
     "build": "node scripts/build.js",
     "build-publish": "node scripts/publish.js",
-    "publish-to-npm": "npm run build-publish && npm run build && node scripts/publish-to-npm.js",
-    "test": "node scripts/test.js --env=jsdom"
+    "publish-to-npm": "npm run build-publish && node scripts/publish-to-npm.js",
+    "test": "node scripts/test.js --env=jsdom",
+    "ts": "webpack --config webpack.config.js"
   },
   "husky": {
     "hooks": {
