--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "dependencies": {
     "@babel/core": "7.2.2",
     "@babel/plugin-transform-react-jsx-self": "^7.2.0",
+    "@commitlint/cli": "^7.5.2",
+    "@commitlint/config-conventional": "^7.5.0",
     "@svgr/webpack": "4.1.0",
     "@types/jest": "24.0.11",
     "@types/node": "11.11.3",
