--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "sass-loader": "7.1.0",
     "style-loader": "0.23.1",
     "terser-webpack-plugin": "1.2.2",
+    "ts-loader": "^5.3.3",
     "typescript": "3.3.3333",
     "typings-for-css-modules-loader": "^1.7.0",
     "url-loader": "1.1.2",
@@ -70,7 +71,9 @@
     "build": "node scripts/build.js",
     "test": "node scripts/test.js",
     "publish": "node scripts/publish.js",
-    "publish-to-npm": "npm run publish && node scripts/publish-to-npm.js"
+    "publish-to-npm": "npm run publish && node scripts/publish-to-npm.js",
+    "ts-dev": "webpack --mode development --config webpack.config.js",
+    "ts": "webpack --mode production --config webpack.config.js"
   },
   "husky": {
     "hooks": {
@@ -135,5 +138,8 @@
     "presets": [
       "react-app"
     ]
+  },
+  "devDependencies": {
+    "webpack-cli": "^3.3.0"
   }
 }
