--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,8 +5,10 @@
     "module": "esnext",
     "target": "es6",
     "lib": ["es6", "dom"],
+    // "alwaysStrict": true,
     // "sourceMap": true,
     // "allowJs": true,
+    "declaration": true,
     "jsx": "react",
     "moduleResolution": "node",
     "rootDir": "src",
@@ -18,9 +20,10 @@
     "strictNullChecks": true,
     "suppressImplicitAnyIndexErrors": true,
     "noUnusedLocals": true,
+    "noImplicitUseStrict": true,
   },
   "include": [
-    "./src/component/**/*"
+    "./src/component/**/*",
   ],
   "exclude": [
     "node_modules",
